2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sum.man: Fixed all warnings due to use of now deprecated
	* cksum.man: commands. Added a section about how to give feedback.
	* crc16.man:
	* crc32.man:

2006-11-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crcc.tcl: Silence critcl warning.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* cksum.tcl: Bumped version to 1.1.1
	* cksum.man:
	* pkgIndex.tcl:

2006-06-29  Aaron Faupell <afaupell@users.sourceforge.net>

	* cksum.tcl: fixed typo koin->join

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cksum.test:  More boilerplate simplified via use of test support.
	* crc16.test:
	* crc32.test:
	* crc32bugs.test:
	* sum.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cksum.test: Hooked into the new common test support code.
	* crc16.test:
	* crc32.test:
	* crc32bugs.test:
	* sum.test:

2005-10-24  Andreas Kupries <andreask@activestate.com>

	* cksum.bench: New files. Basic benchmark tests
	* crc16.bench: of the crc and derived commands.
	* crc32.bench: 
	* sum.bench: 

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-08-26  Andreas Kupries <andreask@activestate.com>

	* crc16.tcl: Accepted Don Porter's patch attached to [Tcllib SF
	* crc32.tcl: Bug 1274120], fixing the creative-writing problem for
	  variable v and restricting the value to 32bit ints. Additionally
	  added an [unset v] after the initialization, as the variable is
	  not needed beyond that part of the code.

2005-08-25  Andreas Kupries <andreask@activestate.com>
