@@ -1,9 +1,9 @@
-[manpage_begin cksum n 1.1.1]
+[manpage_begin cksum n 1.1.2]
 [copyright {2002, Pat Thoyts}]
 [moddesc   {Cyclic Redundancy Checks}]
 [titledesc {Calculate a cksum(1) compatible checksum}]
 [require Tcl 8.2]
-[require cksum [opt 1.1.1]]
+[require cksum [opt 1.1.2]]
 [description]
 [para]
 
