@@ -1,3 +1,9 @@
+2008-03-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* cksum.tcl (::crc::cksum): Fixed handling of options -chunksize
+	* cksum.man: and -channel. Bumped version of cksum to 1.1.2.
+	* pkgIndex.tcl
+
 2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
